Fix overflow problem

--- a/css/component.css
+++ b/css/component.css
@@ -117,6 +117,7 @@
 }
 
 div.og-details{
+	min-height: 500px;
 	overflow: scroll;
 }
 
